--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -63,8 +63,9 @@
     .hero-text {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(2, 1fr);
+      grid-template-rows: repeat(2, auto);
       gap: var(--spacing-400);
+      border: 1px solid blue;
     }
 
     .hero-text h1 {
